--- a/albumStyles.css
+++ b/albumStyles.css
@@ -3,9 +3,18 @@ body {
 }
 h2 {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 img {
     display: block;
     margin: auto;
     width: 40%;
+}
+li {
+    font-style: italic;
+}
+h1 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: maroon;
 }
